--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,10 @@
 #spring.datasource.username=root
 #spring.datasource.password=
 
-spring.datasource.url=jdbc:mysql://sql11.freemysqlhosting.net:3306/sql11413348
+spring.datasource.url=jdbc:mysql://localhost:3306/viancoapi
 
-spring.datasource.username=sql11413348
-spring.datasource.password=1qAESrT9zg
+spring.datasource.username=root
+spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.database-platform =  org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
